Fix alignment again

--- a/src/containers/Dashboard/DashboardHero/DashboardHero.module.scss
+++ b/src/containers/Dashboard/DashboardHero/DashboardHero.module.scss
@@ -10,6 +10,7 @@
 
   a {
     color: var(--color-sail-gray-700);
+    display: flex;
   }
 }
 
